--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <properties>
         <java.version>1.8</java.version>
         <springboot.version>2.5.6</springboot.version>
+        <lombok.version>1.16.18</lombok.version>
     </properties>
     <dependencies>
         <dependency>
@@ -27,15 +28,7 @@
         </dependency>
 
         <!-- 单元测试 -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
+
         <!-- lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
